Recipe testing best practices (#7094)
* Recipe testing best practices

Use this link to re-run the recipe: https://app.moderne.io/builder/9uwIjLvVE?organizationId=QUxML01vZGVybmUvTW9kZXJuZSArIE9wZW5SZXdyaXRl

Co-authored-by: Moderne <team@moderne.io>

* Fix RenameVariableTest: wrap .toList() in ArrayList for mutability

The prior commit replaced .collect(toList()) with .toList(), but the
resulting immutable list is later mutated via addAll(), causing
UnsupportedOperationException in all 19 RenameVariableTest cases.

---------

Co-authored-by: Moderne <team@moderne.io>